--- a/resources/css/capstone_colmaracademy.css
+++ b/resources/css/capstone_colmaracademy.css
@@ -92,17 +92,20 @@ nav a {
     .header-content-mobile {
         display: flex;
         width: 100%;
-        
+        justify-content: space-evenly;
+        vertical-align: center;
+        margin-top: 20px;
     }
 
-    nav .nav-mobile {
+
+   /* nav .nav-mobile {
         justify-content: space-between;
     }
 
     .nav-mobile li {
         margin-right: 40px;
     }
-}
+    */
 
 /* -------------------- Introduction Section ------------------------- */
 
